fixing scrollbar for template menu

--- a/sass/components/_view.scss
+++ b/sass/components/_view.scss
@@ -7,8 +7,8 @@
             display: flex;
             align-items: center;
             height: 32px;
-            padding: 0 0 0 16px;
-            margin: 16px 0 0;
+            padding: 0 4px 0 16px;
+            margin: 16px 7px 0 0;
             box-sizing: border-box;
             @include themify($themes) {
                 border: 1px solid themed('ListLiBorder');
@@ -47,7 +47,7 @@
         .content {
             display: block;
             height: 140px;
-            padding: 0 16px;
+            padding: 0 9px 0 16px;
             position: relative;
 
             .ciq-list {
@@ -60,15 +60,12 @@
                     right: -20px !important;
 
                     .simplebar-content {
-                        padding-right: 20px !important;
+                        padding-right: 29px !important;
 
                         .ciq-list-inner {
                             min-width: 248px;
                         }
                     }
-                }
-                .simplebar-track {
-                    right: -8px;
                 }
                 .simplebar-track.horizontal {
                     display: none;
